build: cleaned up the module handling and fixed testing not working